--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,142 @@
+body {
+  font-family: system-ui;
+  background: #bfa4a4;
+  color: #001f3f;
+  text-align: center;
+}
+
+button{
+  text-align: center
+  font-size: 16 px;
+  cursor: pointer;
+}
+
+body {
+  font-family: times new roman;
+  background: lightblue;
+  color: dark blue;
+  text-align: center;
+  image-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: system-ui;
+  background: #bfa4a4;
+  text-align: center;
+}
+
+.page-title {
+  margin: 20px 0;
+  color: #001f3f;
+}
+
+.game-container {
+  display: grid;
+  grid-template-columns: repeat(4, 125px);
+  gap: 12px;
+  justify-content: center;
+}
+
+.game-info-container {
+  grid-column: 1 / -1;
+  margin-bottom: 15px;
+}
+
+.game-info {
+  font-size: 2em;
+  color: white;
+}
+
+.card {
+  width: 125px;
+  height: 175px;
+  perspective: 1000px;
+  cursor: pointer;
+}
+
+.card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+}
+
+.card.flipped .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 15%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+.card-back {
+  background: #184059;
+}
+
+.card-front {
+  background: white;
+  transform: rotateY(180deg);
+}
+
+.card.matched {
+  pointer-events: none;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  padding: 15px;
+  border-radius: 18px;
+  margin-bottom: 25px;
+}
+
+
+button {
+  background-color: #c7d2fe;     
+  color: dark blue;             
+  padding: 12px 22px;
+  border: none;
+  border-radius: 999px;         
+  font-size: 15px;
+  font-weight: 600;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+  transition: all 0.3s ease;
+}
+
+
+button:hover {
+  background-color: #a5b4fc;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.12);
+}
+
+
+button:active {
+  transform: translateY(0);
+  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+}
+
+
+button:focus {
+  outline: 3px solid #ddd6fe;
+}
+
+
+
 
